First commit for version 3

--- a/stylish/components/_accordion.scss
+++ b/stylish/components/_accordion.scss
@@ -5,8 +5,8 @@
 .accordion{
   .a_head{
     background-color: $accordion_head_color; padding: 10px; cursor: pointer;
-    i{ float: right}
-    &.active i{@include rotate(180deg);}
+    i.a_state{ float: right}
+    &.active i.a_state{@include rotate(180deg);}
   }
   .a_content{ display: none; background-color: $accordion_content_color; padding: 20px 10px;}
 }
