--- a/stylish/components/_msg.scss
+++ b/stylish/components/_msg.scss
@@ -3,29 +3,40 @@
 
 
 .messages, .msg{
-  margin-bottom: 30px;
+  $icon_size:30px;
+  margin-bottom: 30px; list-style: none;
+
   li{
-    color: $color_mine_shaft; list-style: none;padding:10px 10px 10px 55px;@include border-radius(4px);font-size: 14px; position: relative; margin-bottom: 20px;
-    &:before{@extend .sy_icon;font-size: 30px; position: absolute; left: 15px; top: 50%; margin-top: -15px;}
+    list-style: none; font-size: 14px;
     &:last-child{ margin-bottom: 0}
-    li{
-      padding: 0; margin: 0;
-    }
+  }
+
+  > li{
+    color: $color_mine_shaft; padding:10px 10px 10px $icon_size+30px;@include border-radius(4px); position: relative; margin-bottom: 20px;
+    &:before{@extend .sy_icon;font-size: $icon_size; position: absolute; left: 15px; top: 50%; margin-top: -$icon_size/2;}
+
+    //Error state
     &.error-msg,
     &.error_msg{
       background-color: $msg_error;
       &:before{@extend .sy_remove_round:before; }
     }
+
+    //Success state
     &.success-msg,
     &.success_msg{
       background-color: $msg_success;
       &:before{@extend .sy_check_round:before; }
     }
+
+    //Notice state
     &.notice-msg,
     &.notice_msg{
       background-color: $msg_notice;
       &:before{@extend .sy_info_round:before; }
     }
+
+    //Warning state
     &.warning-msg,
     &.warning_msg{
       background-color: $msg_warning;
