--- a/stylish/components/_paginations.scss
+++ b/stylish/components/_paginations.scss
@@ -7,11 +7,11 @@
   li{
     display: inline-block; margin: 0 3px;
     a{
-      background-color: $pagination_item_bg; color: $pagination_item_text; font-size: 14px; padding: 10px;@include border-radius(4px);
-      &:hover{background-color: darken($pagination_item_bg, 8%)}
+      background-color: $pag_item_bg; color: $pag_item_text; font-size: 14px; padding: 10px;@include border-radius(4px);
+      &:hover{background-color: darken($pag_item_bg, 8%)}
     }
 
     //Active / Current state
-    &.current a{ background-color: $pagination_item_current_bg; color:$pagination_item_current_text}
+    &.current a{ background-color: $pag_item_current_bg; color:$pag_item_current_text}
   }
 }
