--- a/stylish/responsive/_res_medium.scss
+++ b/stylish/responsive/_res_medium.scss
@@ -1,8 +1,8 @@
-/* TABLETS AND SMALLER MONITORS */
+/* TABLETS */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
-@media screen and (max-width: 990px){
+@media screen and (max-width: $screen_medium){
 
   //Check if site uses responsive desig or not
   @if $responsive == true{
