--- a/stylish/global/grid/_grid.scss
+++ b/stylish/global/grid/_grid.scss
@@ -4,16 +4,18 @@
 
 /* Container */
 .container{
-  @include container();
-  &.full{padding-left: 0; padding-right: 0}
+  @include container_style(); @include container_size();
+
+  //Strip padding from container
+  &.full,
+  &.container_clean{padding-left: 0; padding-right: 0; overflow: hidden}
+
+  //Override max width and push container full width (unable to use if not using responsive)
+  &.liquid{@include container_size(inherit)}
 }
 
-
-//Container with only padding
-.container_clean{
-  padding-left: $container_gutter; padding-right: $container_gutter;
-}
-
-
-//Include spacers
-@include spacers();
+//Container corrections for different types of grid
+@include container_generate(quarter,$gutter/8);
+@include container_generate(half,$gutter/4);
+@include container_generate(double,$gutter);
+@include container_generate(triple,$gutter*1.5);
