--- a/stylish/style.scss
+++ b/stylish/style.scss
@@ -73,6 +73,7 @@ Version: 3.0
 @import "responsive/res_large";
 @import "responsive/res_medium";
 @import "responsive/res_small";
+@import "responsive/res_xsmall";
 
 
 /* GLOBAL STYLING */
