--- a/stylish/responsive/_res_large.scss
+++ b/stylish/responsive/_res_large.scss
@@ -1,4 +1,4 @@
-/* DESKTOP AND LAPTOPS WITH SMALLER MONITORS */
+/* SMALL SCREEN DESKTOP DEVICES */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
