--- a/stylish/responsive/_res_xsmall.scss
+++ b/stylish/responsive/_res_xsmall.scss
@@ -1,4 +1,4 @@
-/* PHONES */
+/* MOBILE PHONE DEVICES */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
@@ -6,6 +6,8 @@
 
   //Check if site uses responsive desig or not
   @if $responsive == true{
+
+
 
 
   }
