--- a/stylish/responsive/_res_medium.scss
+++ b/stylish/responsive/_res_medium.scss
@@ -1,4 +1,4 @@
-/* TABLETS */
+/* TABLET DEVICES */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
