Transferring input style in to mixin

--- a/stylish/global/_variables.scss
+++ b/stylish/global/_variables.scss
@@ -115,6 +115,8 @@ $input_disabled_bg:   $color_silver; //input bg color for disabled state
 $input_disabled_text: $color_dove_gray; //input text color for disabled state
 $input_placeholder:   $color_mercury; //input placeholder color
 $input_height:        42px; //input height
+$input_padding:       7px 12px; //input padding
+$input_border_width:  1px; //input border width
 
 $checkbox_bg:         $input_bg; //checkbox bg color
 $checkbox_border:     $input_border; //checkbox border color
