--- a/stylish/global/_forms.scss
+++ b/stylish/global/_forms.scss
@@ -12,7 +12,8 @@ input[type=datetime],
 input[type=search],
 select,
 textarea{
-  margin: 0;font-size: $p; padding: 7px 12px; height: $input_height; border: 1px solid $input_border; width: 100%; @include border-radius(4px); color:$input_text; background-color: $input_bg; font-family:$body_font_family; @include appearance(none); @include font-smoothing();
+
+  @include input_style();
 
   &.auto_width{ width: auto}
   &:focus{@include box-shadow(rgba($input_focus, 0.2) 0 0 10px);}
