--- a/stylish/global/_mixins.scss
+++ b/stylish/global/_mixins.scss
@@ -230,6 +230,15 @@
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
+//Default input style
+@mixin input_style($color:$input_text, $bg:$input_bg, $txt_size: $p, $padding:$input_padding, $height: $input_height, $border_width: $input_border_width, $border_color: $input_border, $margin: 0, $width:100%, $radius:4px){
+  color:$color; background-color: $bg; font-size: $txt_size; padding: $padding; height: $height; border: $border_width solid $border_color; margin: $margin; width: $width; font-family:$body_font_family; @include border-radius($radius);@include appearance(none); @include font-smoothing();
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
 //Spacers margin and padding
 @mixin spacers(){
   $i:100;
